--- a/FrontEnd/user.html
+++ b/FrontEnd/user.html
@@ -526,7 +526,8 @@
         <div class="top-nav">
             <div class="nav-tabs">
                 <button class="nav-tab active" type="button">Generate</button>
-                <a href="user_history.html"><button class="nav-tab" type="button">History</button></a>
+                <a href="user_history.html"><button class="nav-tab" type="button" >History</button></a>
+                <a href="user_settings.html"><button class="nav-tab" type="button" >Settings</button></a>
             </div>
         </div>
 
