minor changes again!

--- a/FrontEnd/admin_settings.html
+++ b/FrontEnd/admin_settings.html
@@ -13,7 +13,7 @@
         <nav>
             <ul>
               <li><a href="admin.html">Dashboard</a></li>
-              <li><a href="user_management.html">User Management</a></li>
+              <li><a href="admin_user_management.html">User Management</a></li>
               <li><a href="logs.html">Logs</a></li>
               <li><a href="admin_settings.html">Model Settings</a></li>
             </ul>
