--- a/FrontEnd/logs.html
+++ b/FrontEnd/logs.html
@@ -12,7 +12,7 @@
         <p>Admin Panel</p>
         <nav>
             <a href="admin.html">Dashboard</a>
-            <a href="user_management.html">User Management</a>
+            <a href="admin_user_management.html">User Management</a>
             <a href="logs.html">Logs</a>
             <a href="admin_settings.html">Model Settings</a>
         </nav>
