Admin dark mode

--- a/FrontEnd/admin.html
+++ b/FrontEnd/admin.html
@@ -28,10 +28,10 @@
     <main>
       <header>
         <h1>Dashboard</h1>
-        <p>overview of system analytics and performance</p>
+        
         <nav>
           <div>
-            <a href="#">User View</a>
+            <button id="theme-toggle" class="icon-btn" title="Toggle theme">🌙</button>
             <a href="#" class="logout-link">Log out</a>
           </div>
         </nav>
