--- a/FrontEnd/admin_settings.html
+++ b/FrontEnd/admin_settings.html
@@ -31,7 +31,7 @@
             <p>Configure AI model parameters</p>
             <nav>
                 <div>
-                    <a href="#">User View</a>
+                    <button id="theme-toggle" class="icon-btn" title="Toggle theme">🌙</button>
                     <a href="#" class="logout-link">Log out</a>
                 </div>
             </nav>
