--- a/FrontEnd/admin_user_management.html
+++ b/FrontEnd/admin_user_management.html
@@ -26,7 +26,7 @@
         <h1>User Management</h1>
         <p>Manage and monitor user accounts</p>
         <div>
-          <a href="#">User View</a>
+          <button id="theme-toggle" class="icon-btn" title="Toggle theme">🌙</button>
           <a href="#" class="logout-link">Log Out</a>
         </div>
       </header>
