--- a/FrontEnd/logs.html
+++ b/FrontEnd/logs.html
@@ -26,7 +26,7 @@
             <h1>System Logs</h1>
             <p>View recent system operations and activities</p>
             <div>
-                <a href="#">User View</a>
+                <button id="theme-toggle" class="icon-btn" title="Toggle theme">🌙</button>
                 <a href="#" class="logout-link">Log Out</a>
             </div>
         </header>
