--- a/FrontEnd/user.html
+++ b/FrontEnd/user.html
@@ -628,6 +628,9 @@
     </main>
 </div>
 
+<!-- Markdown renderer and sanitizer (used to convert model output into safe HTML) -->
+<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/dompurify@2.4.0/dist/purify.min.js"></script>
 <script src="app.js"></script>
 <script>
   // No more sessionStorage guard – backend /me + app.js handles auth
