--- a/FrontEnd/admin.html
+++ b/FrontEnd/admin.html
@@ -55,15 +55,8 @@
         </div>
       </div>
       <section class="charts-grid">
-        <div class="chart-card"><canvas id="languageLine" aria-label="Languages line chart"></canvas></div>
-        <div class="chart-card"><canvas id="languageArea" aria-label="Languages area chart"></canvas></div>
-        <div class="chart-card"><canvas id="languagePie" aria-label="Languages pie chart"></canvas></div>
-        <div class="chart-card"><canvas id="languageDoughnut" aria-label="Languages doughnut chart"></canvas></div>
-        <div class="chart-card"><canvas id="languageRadar" aria-label="Languages radar chart"></canvas></div>
-        <div class="chart-card"><canvas id="languagePolar" aria-label="Languages polar area chart"></canvas></div>
-        <div class="chart-card"><canvas id="languageScatter" aria-label="Languages scatter chart"></canvas></div>
-        <div class="chart-card"><canvas id="languageBubble" aria-label="Languages bubble chart"></canvas></div>
-        <div class="chart-card"><canvas id="languageMixed" aria-label="Languages mixed chart"></canvas></div>
+        <div class="chart-card" style="width:100%;"><h3 style="margin:6px 0 12px 0">Languages Used (Bar)</h3><canvas id="languagesBar" aria-label="Languages bar chart"></canvas></div>
+        <div class="chart-card" style="width:100%;margin-top:18px"><h3 style="margin:6px 0 12px 0">Active Users (Line)</h3><canvas id="activeUsersLine" aria-label="Active users line chart"></canvas></div>
       </section>
       <!-- Popular Languages block removed (now shown via chart above) -->
 
