Add and delete user

--- a/FrontEnd/admin_user_management.html
+++ b/FrontEnd/admin_user_management.html
@@ -53,6 +53,41 @@
       </section>
     </main>
 
+    <div id="add-user-modal" class="modal-overlay" aria-hidden="true">
+      <div class="modal-card" role="dialog" aria-modal="true" aria-labelledby="add-user-title">
+        <button type="button" class="modal-close" id="add-user-close" aria-label="Close">×</button>
+        <h3 id="add-user-title">Add New User</h3>
+          <p class="modal-subtitle">Create an account for someone quickly. Choose a role and a password (min 6 characters).</p>
+        <form id="add-user-form">
+          <label>
+            Username
+            <input type="text" id="add-username" required minlength="3" autocomplete="off" />
+          </label>
+          <label>
+            Email
+            <input type="email" id="add-email" placeholder="user@example.com" autocomplete="off" />
+          </label>
+          <label>
+            Password
+            <input type="password" id="add-password" required minlength="6" />
+          </label>
+          <label>
+            Confirm Password
+            <input type="password" id="add-confirm" required minlength="6" />
+          </label>
+          <label>
+            Role
+            <select id="add-role">
+              <option value="user" selected>User</option>
+              <option value="admin">Admin</option>
+            </select>
+          </label>
+          <button type="submit" class="btn-primary" style="width:100%;justify-content:center;">Create User</button>
+          <p id="add-user-message" class="modal-message" role="status"></p>
+        </form>
+      </div>
+    </div>
+
     <script src="app.js"></script>
   </body>
 </html>
